# keria

./: README.md  pyproject.toml  setup.py
docs/: index.rst  keria_app.rst  keria_notifications.md  w3c_holder_workflow.rst
scripts/keri/cf/: keria.json
src/keria/: __init__.py
src/keria/app/: agenting.py  aiding.py  credentialing.py  didwebing.py  grouping.py  ipexing.py  serving.py  specing.py  streaming.py  w3cing.py
src/keria/app/cli/commands/: start.py
src/keria/core/: authing.py  httping.py  keeping.py
src/keria/db/: basing.py
src/keria/peer/: exchanging.py
src/keria/resources/: __init__.py  designated-aliases-public-schema.json  designated-aliases-rules.json
src/keria/testing/: testing_helper.py
tests/app/: test_agenting.py  test_aiding.py  test_didwebing.py  test_indirecting.py  test_ipexing.py  test_streaming.py  test_w3cing.py
tests/core/: test_authing.py
