[project]
name = "keria"
version = "0.4.0"
description = "KERIA: KERI Agent in the cloud"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
authors = [
    { name = "Philip S. Feairheller", email = "pfeairheller@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
keywords = [
    "secure attribution",
    "authentic data",
    "discovery",
    "resolver"
]
requires-python = ">=3.12.6,<3.14"
dependencies = [
    "hio==0.6.14",
    "keri>=1.2.13,<2",
    "vc-isomer",
    "mnemonic==0.21",
    "multicommand>=1.0.0",
    "falcon==4.0.2",
    "http_sfv==0.9.9",
    "dataclasses_json==0.6.7",
    "apispec==6.10.0",
    "marshmallow_dataclass==8.7.1",
    "deprecation==2.1.0",
]

[project.scripts]
keria = "keria.app.cli.keria:main"

[tool.uv]
package = true

[tool.uv.sources]
keri = { path = "../keripy", editable = true }
"vc-isomer" = { path = "../w3c-crosswalk", editable = true }

[tool.setuptools.package-data]
"keria.resources" = ["*.json"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=9.0.2",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"
